--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<div class="inner">
 							<header>
 								<h1>Full Stack Web Developer</h1>
-								<p>I am a passionate problem solver who’s dedicated to implementing effective solutions.  I have recently discovered the awesome potential that web applications have in everyday life, and would love  to continue my newfound passion through programming applications in the MEAN Stack, Full Stack JavaScript, and other languages.</p>
+								<p> I'm a Full Stack web developer who loves designing awesome web applications. I currently program in the MEAN Stack, Full Stack JavaScript, and AngularJS and am constantly learning about new languages and architectures.</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
